convertedToMDAPI/objects/PRF__c.object
<CustomObject>
    <label>PRF</label>
    <nameField>
        <displayFormat>PRF-{0000}</displayFormat>
        <label>PRF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>BodyWeightInKg__c</fullName>
        <description>Patient: Body Weight in kg</description>
        <inlineHelpText>Patient: Body Weight in kg</inlineHelpText>
        <label>Body Weight in kg</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateOfBirthText__c</fullName>
        <formula>TEXT(YEAR(DateOfBirth__c)) &amp; "-" &amp; TEXT(MONTH(DateOfBirth__c)) &amp; "-" &amp; TEXT(Day(DateOfBirth__c))</formula>
        <inlineHelpText>DOB shown as text in YYYY-MM-DD Format</inlineHelpText>
        <label>DOB as Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfBirth__c</fullName>
        <description>Patient: Date of Birth (DOB)</description>
        <inlineHelpText>Patient: Date of Birth (DOB)</inlineHelpText>
        <label>Date of Birth (DOB)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>First Name of Patient</description>
        <inlineHelpText>First Name of Patient</inlineHelpText>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>Last Name of Patient</description>
        <inlineHelpText>Last Full Name of Patient</inlineHelpText>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleNameInitial__c</fullName>
        <description>one letter only</description>
        <inlineHelpText>one letter only, e.g. for John please insert a "J"</inlineHelpText>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Middle Name Initial</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PatientClassification__c</fullName>
        <inlineHelpText>Pediatric / Adult</inlineHelpText>
        <label>Patient Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pediatric</fullName>
                </value>
                <value>
                    <fullName>Young Adult</fullName>
                </value>
                <value>
                    <fullName>Adult</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>